Bug 417726 - [Themes] Default theme toolbar gradient looks bad on GTK
This changes the toolbar from an uneven image of a gradient to a smooth
gradient from the default widget color to the background color used in
the workbench. It makes it much more pleasant to look at and is better
integrated with the look of other applications. See bug for screenshots.

It also changes the perspective switcher gradient to match; it started
with a slightly different color before.

Note that this depends on the change for bug 420035 in platform UI.

--- a/platform/org.eclipse.platform/css/e4_default_gtk.css
+++ b/platform/org.eclipse.platform/css/e4_default_gtk.css
@@ -16,7 +16,7 @@
 }
 
 .MTrimBar#org-eclipse-ui-main-toolbar  {
-    background-image:  url(./gtkGrey.png);	
+    background-color: COLOR-WIDGET-BACKGROUND #E2E2E2 100%;
 }
 
 .MToolControl.TrimStack {
@@ -31,7 +31,7 @@
 }
 
 #PerspectiveSwitcher { 
-	background-color: #EBEBEB #E2E2E2 100%;
+	background-color: COLOR-WIDGET-BACKGROUND #E2E2E2 100%;
 	eclipse-perspective-keyline-color: #B4B4B4 #B4B4B4;
 }
 
